pertemuan 4 PR-fix 1

--- a/sidebar.css
+++ b/sidebar.css
@@ -187,3 +187,10 @@
     font-size: 30px;
     opacity: 50%;
 }
+
+.fa-angle-double-left{
+    float: right;
+    font-size: 20px;
+    opacity: 50%;
+}
+
